welcome.lessons.welcome.array.has271.Has271.scala.error
has271:9: error: not found: value MATHS
				&& MATHS.abs(nums(i)-1 - (nums (i+2))) <= 2) {
                                   ^